--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     
     <!--esse é meu bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!--fontes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
+
+    <!--folha de estilos-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -51,7 +58,7 @@
 
           <!--jumbotron-->
           <div class="jumbotron">
-            <h1 class="display-4">Sorveteria Delicia</h1>
+            <h1 class="display-4">IOGO Delicia</h1>
             <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
             <hr class="my-4">
             <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
@@ -79,6 +86,32 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
+          </div>
+
+          <!--cards-->
+          <div class="card" style="width: 18rem;">
+            <img src="images/product1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Sorvete</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="images/product2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Sorvete</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="images/product3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Sorvete</a>
+            </div>
           </div>
     </div>
     
