--- a/index.html
+++ b/index.html
@@ -58,9 +58,19 @@
 
           <!--jumbotron-->
           <div class="jumbotron">
-            <h1 class="display-4 text-white drop-shadow">IOGO Delicia</h1>
-            <p class="lead">O melhor sorvete da Praça!</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+           <div class="row">
+
+             <div class="col12 col-md-7"> 
+               <h1 class="display-4 text-white drop-shadow">IOGO Delicia</h1>
+              <p class="lead">O melhor sorvete de Brasília</p>
+              <a class="btn btn-outline-light bnt-lg px-5 py3" href="#" role="button">Eu quero</a>
+             </div>
+
+             <div class="col12 col-md-5"> 
+               <img src="images/hero1.png" alt="Sorvete" class=" img-fluid" >
+            </div>
+
+           </div>
           </div>
 
           <!--carrossel-->
