--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <div class="container">
         <!--barra de navegação-->
-        <nav class="navbar navbar-expand-lg navbar-light ">
+        <nav class="navbar navbar-expand-lg ">
 
-          <nav class="navbar navbar-light ">
+          <nav class="navbar ">
             <a class="navbar-brand" href="#">
               <img src="images/iogo.png" alt="yogo sorveteria">
 </a>
@@ -32,19 +32,21 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contato</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+              <li class="nav-item dropdow mr-4">
+                <a class="nav-link dropdown-toggle btn btn-outline-light text-white " href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Sabores
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
                   <a class="dropdown-item" href="#">Morango</a>
                   <a class="dropdown-item" href="#">Chocolate</a>
                   <a class="dropdown-item" href="#">Abacaxi</a>
                 </div>
               </li>
+              <li class="nav-item">
+                <a class="nav-link btn btn-outline-light text-white" href="#">Contato</a>
+              </li>
+             
             </ul>
           </div>
         </nav>
