--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
            <div class="row">
 
              <div class="col12 col-md-7 text-center text-md-left"> 
-               <h1 class="display-4 text-white drop-shadow">IOGO Delicia</h1>
+               <h1 class="display-4 text-white drop-shadow">YOGO Delicia</h1>
               <p class="lead">O melhor sorvete de Brasília</p>
               <a class="btn btn-outline-light bnt-lg bnt-lg mb-5 mb-md-0" href="#" role="button">Eu quero</a>
              </div>
